<resources>
    <string name="app_name">Starfield 3D Live Wallpaper</string>
    <string name="wallpaper_description">Starfield 3D Live Wallpaper</string>
    <string name="dream_description">Starfield 3D Live Wallpaper</string>
    <string name="author">drdwrd</string>
    <string name="settings_activity_title">Settings</string>

    <string name="btn_set_wallpaper">Set Wallpaper</string>
    <string name="btn_set_screensaver">Set Screensaver</string>
    <string name="btn_edit_settings">Settings</string>

    <string name="label_stars_speed">Stars Speed</string>
    <string name="btn_adaptive_fps">Adaptive FPS</string>
    <string name="label_stars_density">Stars Density</string>
    <string name="label_parallax_effect">Parallax Effect</string>
    <string name="btn_scrolling_effect">Wallpaper Scrolling</string>
    <string name="btn_texture_quality">High Quality Textures(requires restart)</string>

    <string name="menu_reset">Reset</string>
</resources>
